eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-backend-deployment
  namespace: bank
  labels:
    app: simple-bank-backend
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: simple-bank-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: simple-bank-backend
    spec:
      containers:
        - name: simple-bank-backend
          image: 637423512359.dkr.ecr.us-east-1.amazonaws.com/simplebank:66feb34c4414131336b12456dbdedd8386527293
          ports:
            - containerPort: 8080
              name: tcp
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: simple-bank-backend-service
  namespace: bank
  labels:
    app: simple-bank-backend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: ClusterIP
  selector:
    app: simple-bank-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  sessionAffinity: None
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-backend-ingress
  namespace: bank
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: simple-bank-backend-service
                port:
                  number: 80
            path: /
            pathType: Prefix
